--- a/templates/admintools-deployment.yaml
+++ b/templates/admintools-deployment.yaml
@@ -48,6 +48,9 @@ spec:
           env:
             - name: TEMPORAL_CLI_ADDRESS
               value: {{ include "temporal.fullname" . }}-frontend:{{ include "temporal.frontend.grpcPort" . }}
+          {{- if .Values.admintools.additionalEnv }}
+          {{- toYaml .Values.admintools.additionalEnv | nindent 12 }}
+          {{- end }}
           livenessProbe:
               exec:
                 command:
