--- a/templates/server-job.yaml
+++ b/templates/server-job.yaml
@@ -1,4 +1,5 @@
 {{- if $.Values.server.enabled }}
+{{- if and (eq .Values.server.config.persistence.default.driver "sql") (eq .Values.server.config.persistence.default.sql.driver "cassandra")}}
 {{- if .Values.schema.setup.enabled }}
 apiVersion: batch/v1
 kind: Job
@@ -296,5 +297,6 @@ spec:
       tolerations:
       {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
